# ComfyUI_MangaNinjia

./: MangaNinjia_node.py  README.md  __init__.py  base_manganinjia.json  infer.py  manganinjia.json  node_utils.py  pyproject.toml  requirements.txt
js/: Canvas.js  Canvas_view.js
src/: manganinjia_pipeline.py
src/models/: attention.py  mutual_self_attention_multi_scale.py  unet_2d_blocks.py
